--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.site-container{
+.site-container {
   min-height: 100vh;
 }
-main{
+main {
   flex: 1;
 }
 
@@ -20,31 +20,41 @@ main{
   justify-content: center;
 }
 .product {
-  border: 1px black solid;
+  border: 1px grey solid;
   margin: 1rem;
 }
 .product img {
   width: 100%;
   max-width: 300px;
+  height: 100%;
 }
 .product-info {
- padding: 1rem;
+  padding: 1rem;
 }
-.rating span{
-  color:rgb(225, 173, 44)
+.rating span {
+  color: rgb(218, 100, 32);
 }
+
 .btn-primary {
-  background-color:goldenrod;
+  background-color: rgb(218, 100, 32);
 }
-.img-large{
+.img-large {
   max-width: 100%;
 }
-.mt-3{
+.mt-3 {
   margin-top: 3rem;
 }
-.img-thumbnail{
+.img-thumbnail {
   height: 80px;
 }
-.small-container{
+.small-container {
   max-width: 600px;
+}
+.checkout-steps > div {
+  border-bottom: 0.2rem solid rgb(218, 100, 32);;
+  color: rgb(218, 100, 32);
+}
+.checkout-steps > div.active {
+  border-bottom: 0.2rem solid #08992f;
+  color: #08992f;
 }
